# webshot

./: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
webpage_screenshot/: __init__.py  cli.py  cookie.py  drission.py  screenshot.py  screenshot_enhanced.py  server.py  session.py
webpage_screenshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
